# mrrocpp

configs/: common.ini  edge_follow.ini  haptic.ini  irp6p_ex.ini
configs/test/: haptic_linux.ini
src/: CMakeLists.txt
src/application/: CMakeLists.txt
src/application/askubis_demo_irp6/: CMakeLists.txt  ecp_t_askubis_demo_irp6.cc  ecp_t_askubis_demo_irp6.h  mp_t_askubis_demo_irp6.cc  mp_t_askubis_demo_irp6.h  swarm_demo_irp6_test_local.ini  trajectory_postument_joint.trj
src/application/edge_follow/: ecp_g_edge_follow.cc  ecp_t_edge_follow_mr.cc
src/application/neuron_new/: CMakeLists.txt  ecp_g_neuron_generator_new.cc  ecp_g_neuron_generator_new.h  ecp_mp_g_neuron_generator_new.h  ecp_mp_neuron_sensor_new.h  ecp_mp_t_neuron_new.h  ecp_t_neuron_new.cc  ecp_t_neuron_new.h  mp_t_neuron_new.cc  mp_t_neuron_new.h  neuron_new.ini  neuron_sensor_new.cc  neuron_sensor_new.h
src/application/tp_pick/: Algorythm.cc  Algorythm.cc~  Algorythm.h  Algorythm.h~  CMakeLists.txt  CMakeLists.txt~  DecisionVector.h  DiceReading.h  DiceReading.h~  Dices.h  DicesMatrix.h  DicesMatrix.h~  dice_visual_servo.cc~  dice_visual_servo.h~  ecp_mp_t_tp_pick_servovision.h  ecp_t_tp_pick_servovision.cc  ecp_t_tp_pick_servovision.cc~  ecp_t_tp_pick_servovision.h  mp_t_tp_pick.cc  mp_t_tp_pick.cc~  mp_t_tp_pick.h  mp_t_tp_pick.h~  tp_pick_test_local.ini
src/application/tp_pick/trj/: down.trj  go_down.trj  servo_correction.trj  servo_correction.trj~  slot0.trj  slot0.trj~  slot2.trj  slot3.trj~  slot4.trj~  slot5.trj  slot5.trj~  start_position.trj  start_position.trj~  throw_dices_1_to_cup.trj  throw_dices_1_to_cup.trj~  throw_dices_2_go_down.trj  throw_dices_3_go_down.trj  throw_dices_4_ready.trj  throw_dices_5_throw.trj  under_cup.trj  up.trj  up.trj~
src/application/visual_servoing_demo/przestawianie/: CMakeLists.txt  ecp_t_przestawianie.cc  ecp_t_przestawianie.h
src/generator/ecp/askubis_sinusoidal_velocity/: CMakeLists.txt  ecp_g_askubis_sinusoidal_velocity.cc  ecp_g_askubis_sinusoidal_velocity.h  ecp_mp_g_askubis_sinusoidal_velocity.cc  ecp_mp_g_askubis_sinusoidal_velocity.h
src/ui-qt/: CMakeLists.txt
(+188 files in other folders)
